syntax = "proto3";

package user;

option go_package = ";userpb";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string name = 1;
}
